Actualizar 'index.html' para incluir nuevos colores en la verificación de zonas baldías y modificar 'poligonoz_zonas.js' para agregar nuevas características geoespaciales, incluyendo propiedades de estilo y nuevos polígonos. Se han ajustado los identificadores de los polígonos existentes y se han añadido nuevos polígonos con propiedades de estilo consistentes.

--- a/zona_riezgo/index.html
+++ b/zona_riezgo/index.html
@@ -2457,7 +2457,8 @@
           }
 
           // Verificar si es gris/negro (zonas baldías)
-          if (color.includes('#2b2b36') || color.includes('#353741') || color.includes('#3f4150')) {
+          if (color.includes('#2b2b36') || color.includes('#353741') || color.includes('#3f4150') ||
+            color.includes('#fff') || color.includes('#ffffff')) {
             return {
               tipo: 'baldio',
               color: '#6c757d', // Gris consistente
