--- a/burgess/index.html
+++ b/burgess/index.html
@@ -369,11 +369,55 @@
         width: calc(100% - 20px);
         max-width: 280px;
       }
+
+      /* Botón de regreso al índice principal */
+      .back-button {
+        position: relative;
+        top: auto;
+        left: auto;
+        margin-bottom: 15px;
+        width: 100%;
+        text-align: center;
+      }
+    }
+
+    /* Botón de regreso al índice principal */
+    .back-button {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      background: rgba(255, 255, 255, 0.95);
+      border: none;
+      border-radius: 50px;
+      padding: 12px 20px;
+      cursor: pointer;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease;
+      z-index: 1000;
+      backdrop-filter: blur(10px);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-size: 0.9rem;
+      font-weight: 600;
+      color: #2c3e50;
+      border: 2px solid rgba(102, 126, 234, 0.2);
+    }
+
+    .back-button:hover {
+      background: white;
+      transform: translateY(-2px);
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+      border-color: #667eea;
+      color: #667eea;
     }
   </style>
 </head>
 
 <body>
+  <!-- Botón de regreso al índice principal -->
+  <button class="back-button" onclick="window.location.href='../index.html'">
+    ← Volver al Índice Principal
+  </button>
+
   <div class="container">
     <!-- Header con título -->
     <div class="header">
@@ -1350,13 +1394,18 @@
         // Configurar eventos
         setupEventListeners();
 
+        // Generar modelo automáticamente
+        setTimeout(() => {
+          generarModeloBurgess();
+        }, 500);
+
         // Ocultar loading
         document.getElementById('loading').style.display = 'none';
 
         // Mostrar notificación de bienvenida
-        mostrarNotificacion('🏛️ Modelo de Burgess listo - Haz clic en "Generar Modelo"');
+        mostrarNotificacion('🏛️ Modelo de Burgess generado automáticamente');
 
-        console.log('Aplicación inicializada correctamente - Esperando generación del modelo');
+        console.log('Aplicación inicializada correctamente - Modelo generado automáticamente');
 
       } catch (error) {
         mostrarError('Error de inicialización: ' + error.message);
