--- a/riesgo/index.html
+++ b/riesgo/index.html
@@ -1012,10 +1012,55 @@
         transform: scale(1.1) !important;
       }
     }
+
+    /* Botón de regreso al índice principal */
+    .back-button {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      background: rgba(255, 255, 255, 0.95);
+      border: none;
+      border-radius: 50px;
+      padding: 12px 20px;
+      cursor: pointer;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease;
+      z-index: 1000;
+      backdrop-filter: blur(10px);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-size: 0.9rem;
+      font-weight: 600;
+      color: #2c3e50;
+      border: 2px solid rgba(102, 126, 234, 0.2);
+    }
+
+    .back-button:hover {
+      background: white;
+      transform: translateY(-2px);
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+      border-color: #667eea;
+      color: #667eea;
+    }
+
+    @media (max-width: 768px) {
+      .back-button {
+        position: relative;
+        top: auto;
+        left: auto;
+        margin-bottom: 15px;
+        width: 100%;
+        text-align: center;
+      }
+    }
   </style>
 </head>
 
 <body>
+  <!-- Botón de regreso al índice principal -->
+  <button class="back-button" onclick="window.location.href='../index.html'">
+    ← Volver al Índice Principal
+  </button>
+
   <div class="container">
     <!-- Header con título -->
     <div class="header">
@@ -1105,8 +1150,8 @@
 
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
-  <script src="delitos_data.js"></script>
-  <script src="poligonos_zonas.js"></script>
+  <script src="../datos/delitos.js"></script>
+  <script src="../datos/poligonos_zonas.js"></script>
   <script>
     // Variables globales
     let map;
