Agregar funcionalidades para aplicar filtros automáticamente en 'index.html' de las secciones 'datos' y 'hot-spot'. Se han implementado eventos para los filtros de tipo, año y búsqueda, mejorando la interactividad y la experiencia del usuario al visualizar datos de delitos. Además, se ha optimizado la lógica de selección de tipos de delito con un chip maestro y se han añadido notificaciones para acciones de selección y limpieza de filtros.

--- a/datos/index.html
+++ b/datos/index.html
@@ -751,6 +751,15 @@
       mostrarDelitos();
     });
 
+    // Aplicar filtros automáticamente cuando cambie el tipo
+    document.getElementById('tipoFilter').addEventListener('change', aplicarFiltros);
+
+    // Aplicar filtros automáticamente cuando cambie el año
+    document.getElementById('yearFilter').addEventListener('change', aplicarFiltros);
+
+    // Aplicar filtros automáticamente cuando se escriba en la búsqueda
+    document.getElementById('searchText').addEventListener('input', aplicarFiltros);
+
     document.getElementById('searchText').addEventListener('keypress', function (e) {
       if (e.key === 'Enter') {
         aplicarFiltros();
