Eliminar el módulo de Cartografía y el pie de página en 'index.html' para simplificar la estructura del documento. Se ha comentado el código relacionado, manteniendo la posibilidad de reactivarlo en el futuro si es necesario.

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
         </button>
       </div>
 
-      <!-- Módulo Cartografía -->
+      <!-- Módulo Cartografía
       <div class="module-card" onclick="window.location.href='cartografia/index.html'">
         <span class="module-icon">🗺️</span>
         <h3 class="module-title">Cartografía Básica</h3>
@@ -496,7 +496,7 @@
         <button class="module-btn">
           Ver Cartografía →
         </button>
-      </div>
+      </div> -->
 
       <!-- Módulo Procesamiento -->
       <div class="module-card" onclick="window.location.href='datos/index.html'">
@@ -531,26 +531,6 @@
         <button class="module-btn">
           Explorar Base de Datos →
         </button>
-      </div>
-    </div>
-
-    <!-- Footer -->
-    <div class="footer">
-      <h3>Tecnologías del Sistema</h3>
-      <p>
-        Plataforma desarrollada con tecnologías web modernas para garantizar rendimiento,
-        accesibilidad y compatibilidad multiplataforma en el análisis geoespacial.
-      </p>
-      <div class="tech-stack">
-        <span class="tech-item">HTML5</span>
-        <span class="tech-item">CSS3</span>
-        <span class="tech-item">JavaScript ES6+</span>
-        <span class="tech-item">Leaflet.js</span>
-        <span class="tech-item">Turf.js</span>
-        <span class="tech-item">OpenStreetMap</span>
-        <span class="tech-item">Python</span>
-        <span class="tech-item">GeoJSON</span>
-        <span class="tech-item">Responsive Design</span>
       </div>
     </div>
   </div>
